# klaus

./: .env.bak  .env.example  .gitignore  BOOT.md  DEPLOY_CHECKLIST.md  DISCIPLINE.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  TESTING_REPORT.md  WakeUp.md  analisys-and-next-steps.md  init.yaml  requirements.txt  reset.sh  setup.sh  walkthrough.md
workspace/projects/prj001/easy_agent_builder/: .coveragerc  .env.example  CI_CD_TEST_GUIDE.md  QUICKSTART.md  README.md  ULTRA_LOWCODE_GUIDE.md  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.sh
workspace/projects/prj001/easy_agent_builder/agents/: finance_agent.yaml  my_assistant.yaml  sales_agent.yaml  support_agent.yaml  support_router.yaml
workspace/projects/prj001/easy_agent_builder/audios/: BUSINESS_SUMMARY_PART_1_The_Cost.txt  BUSINESS_SUMMARY_PART_2_ROI.txt  BUSINESS_SUMMARY_PART_3_Risk.txt  BUSINESS_SUMMARY_PART_4_Implementation.txt  BUSINESS_SUMMARY_PART_5_The_Choice.txt  FULL_BUSINESS_SUMMARY.txt  FULL_TECH_SUMMARY.txt  README.md  TECH_SUMMARY_PART_1_Opening.txt  TECH_SUMMARY_PART_2_Architecture.txt  TECH_SUMMARY_PART_3_Integration.txt  TECH_SUMMARY_PART_4_Testing.txt  TECH_SUMMARY_PART_5_Conclusion.txt  generate_audio.sh
workspace/projects/prj001/easy_agent_builder/config/: agents.yaml  deployment.yaml
workspace/projects/prj001/easy_agent_builder/deployment/: Dockerfile  cloudbuild.yaml
workspace/projects/prj001/easy_agent_builder/docs/: ARCHITECTURE.md  BIBHA_INTEGRATION.md  CODE_VS_YAML_GUIDE.md  DEPLOYMENT.md
workspace/projects/prj001/easy_agent_builder/docs/diagrams/: 01-architecture-overview.md  02-circuit-breaker-flow.md  03-agent-types-hierarchy.md  04-testing-pyramid.md  05-deployment-pipeline.md  06-bibha-integration-detail.md  README.md  export-diagrams-pdf.sh  export-diagrams.sh
workspace/projects/prj001/easy_agent_builder/docs/go-to-market/: 01-executive-summary.md  02-business-guide.md  README.md
workspace/projects/prj001/easy_agent_builder/docs/userguide/: 01-quick-start.md  02-complete-guide.md  README.md
workspace/projects/prj001/easy_agent_builder/examples/: 01_basic_agent.py  02_router_pattern.py  03_sequential_workflow.py  04_parallel_workflow.py  05_bibha_integration.py  06_deploy_gcp.py  07_private_integration_template.py  08_complex_agent_with_code.py  09_hybrid_yaml_plus_code.py  10_bibha_integration_real.py
workspace/projects/prj001/easy_agent_builder/src/agent_builder/: __init__.py  bibha_adapter_real.py  circuit_breaker.py  cli.py  deployer.py  integration.py  orchestration.py  (+3 more)
workspace/projects/prj001/easy_agent_builder/tests/: __init__.py  conftest.py
(+306 files in other folders)
